--- a/Frontend/shreeji-shop/src/app/components/header/header.component.html
+++ b/Frontend/shreeji-shop/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top header-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand pl-5" href="#">Shreeji Shop</a>
-  <input class="form-control mr-sm-2 w-25" type="search" placeholder="Search..." />
-  <div class="buttons mr-5">
+  <a class="navbar-brand" href="#">Shreeji Shop</a>
+  <input class="form-control col-sm-4 col-lg-5" type="search" placeholder="Search..." />
+  <div class="buttons">
     <button class="btn btn-primary mr-2" type="button">Profile</button>
     <button class="btn btn-primary mr-2" type="button">Wishlist</button>
     <button class="btn btn-primary mr-2" type="button">Bag</button>
