--- a/Frontend/shreeji-shop/src/app/components/home/home.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex home-container">
-    <div class="col-2 p-0">
+<div class="d-flex offset-sm-auto offset-lg-1 p-2 mt-3">
+    <div class="col-sm-4 col-lg-3 col-xl-2 p-0">
         <app-brand-filter></app-brand-filter>
         <app-model-filter></app-model-filter>
     </div>
