--- a/Frontend/shreeji-shop/src/app/components/home/home.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="d-flex offset-sm-auto offset-lg-1 p-2 mt-3">
-    <div class="col-sm-4 col-lg-3 col-xl-2 p-0">
-        <app-brand-filter></app-brand-filter>
-        <app-model-filter></app-model-filter>
-    </div>
-    <div class="col">
-        <app-models></app-models>
-    </div>
+  <div class="col-sm-4 col-lg-3 col-xl-2 p-0">
+    <app-brand-filter
+      (selectedBrands)="getModelsForSelectedBrandsSafe($event)"
+    ></app-brand-filter>
+    <app-model-filter></app-model-filter>
+  </div>
+  <div class="col-sm-7 col-lg-8 col-xl-9">
+    <app-phone-model
+      [phoneResponse]="phoneModelSubject.asObservable()"
+    ></app-phone-model>
+  </div>
 </div>
