--- a/Frontend/shreeji-shop/src/app/components/home/home.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.html
@@ -9,38 +9,9 @@
     <app-phone-model
       [phoneResponse]="phoneModelSubject.asObservable()"
     ></app-phone-model>
-    <div
-      *ngIf="page.totalPage > 0"
-      class="border-top pt-2 d-flex align-items-center justify-content-around"
-    >
-      <p>Page {{ currentPage + 1 }} of {{ page.totalPage + 1 }}</p>
-      <nav>
-        <ul class="pagination justify-content-center">
-          <li
-            class="page-item mr-3"
-            *ngIf="currentPage > 0"
-            (click)="gotoPrevPage()"
-          >
-            <a class="page-link" href="#">Previous</a>
-          </li>
-          <ng-container *ngFor="let p of getPageNumArray()">
-            <li
-              class="page-item"
-              [ngClass]="{ active: p == currentPage }"
-              (click)="gotoPage(p)"
-            >
-              <a class="page-link">{{ p + 1 }}</a>
-            </li>
-          </ng-container>
-          <li
-            class="page-item ml-3"
-            *ngIf="currentPage < page.totalPage"
-            (click)="gotoNextPage()"
-          >
-            <a class="page-link" href="#">Next</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <app-pagination
+      [paginationResponse]="paginationSub.asObservable()"
+      (paginationReq)="performPagination($event)"
+    ></app-pagination>
   </div>
 </div>
