--- a/Frontend/shreeji-shop/src/app/components/home/pagination/pagination.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/pagination/pagination.component.html
@@ -1,32 +1,33 @@
 <div
   *ngIf="page.totalPage > 0"
-  class="border-top pt-2 d-flex align-items-center justify-content-around"
+  class="border-top pt-2 d-flex align-items-center"
 >
   <p>Page {{ currentPage + 1 }} of {{ page.totalPage + 1 }}</p>
   <nav>
-    <ul class="pagination justify-content-center">
+    <ul class="pagination">
       <li
         class="page-item mr-3"
         *ngIf="currentPage > 0"
         (click)="gotoPrevPage()"
       >
-        <a class="page-link" href="#">Previous</a>
+        <a class="page-link">Previous</a>
       </li>
-      <ng-container *ngFor="let p of getPageNumArray()">
-        <li
-          class="page-item"
-          [ngClass]="{ active: p == currentPage }"
-          (click)="gotoPage(p)"
-        >
-          <a class="page-link">{{ p + 1 }}</a>
-        </li>
-      </ng-container>
+
+      <li
+        *ngFor="let p of getPageNumArray()"
+        class="page-item"
+        [ngClass]="{ active: p == currentPage }"
+        (click)="gotoPage(p)"
+      >
+        <a class="page-link">{{ p + 1 }}</a>
+      </li>
+
       <li
         class="page-item ml-3"
         *ngIf="currentPage < page.totalPage"
         (click)="gotoNextPage()"
       >
-        <a class="page-link" href="#">Next</a>
+        <a class="page-link">Next</a>
       </li>
     </ul>
   </nav>
