pagination bug fix

--- a/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
@@ -3,7 +3,7 @@
     <div class="card mx-3 mb-3">
       <div class="card-body">
         <img [src]="m.imgUrl" [alt]="m.name" class="phone-image" />
-        <p class="p-0 m-0 font-weight-bold">{{ m.name }}</p>
+        <p class="p-0 m-0 font-weight-bold phone-name-width">{{ m.name }}</p>
         <p class="p-0 m-0">{{ m.priceEur }}</p>
       </div>
     </div>
