--- a/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row pl-3">
   <ng-container *ngFor="let p of phones">
     <div class="card mx-3 mb-3" (click)="openPhoneDetails(p)">
       <div class="card-body">
@@ -6,7 +6,7 @@
         <p class="p-0 m-0 mt-2 phone-name">
           {{ p.brandName }}-{{ p.name }}
         </p>
-        <p class="p-0 m-0">Rs. {{ p.priceEur }}</p>
+        <p class="p-0 m-0 price">Rs.{{ p.priceEur }}</p>
       </div>
     </div>
   </ng-container>
