--- a/Frontend/shreeji-shop/src/app/components/home/home.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="d-flex offset-sm-auto offset-lg-1 p-2 home-container">
+<app-tagline></app-tagline>
+<div class="d-flex offset-sm-auto offset-lg-1 p-2">
   <div class="col-sm-4 col-lg-3 col-xl-2 p-0">
     <app-brand-filter
       (selectedBrands)="getPhonesForSelectedBrandsSafe($event)"
