--- a/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.scss
@@ -1,4 +1,5 @@
-$bootstrap-blue: #007bff;
+$box-shadow: rgba(0, 0, 0, 0.1);
+$price-color: #4e54c8;
 .phone-image {
   width: 180px;
   height: 250px;
@@ -10,6 +11,12 @@ $bootstrap-blue: #007bff;
 }
 .card:hover {
   cursor: pointer;
-  box-shadow: 0 1px 8px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
+  border-radius: 0.4375rem;
   transition: all 0.2s ease;
+}
+.price {
+  color: $price-color;
+  font-weight: 400;
+  letter-spacing: 0.3px;
 }
