--- a/Frontend/shreeji-shop/src/app/components/home/pagination/pagination.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/pagination/pagination.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="page.totalPage > 0"
-  class="border-top pt-2 d-flex align-items-center"
+  class="border-top mt-4 pt-3 d-flex align-items-center"
 >
   <p>Page {{ currentPage + 1 }} of {{ page.totalPage + 1 }}</p>
   <nav>
