--- a/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.scss
@@ -1,22 +1,63 @@
-$box-shadow: rgba(0, 0, 0, 0.1);
+$box-shadow: 0 0.3rem 1.525rem -0.375rem rgba(0, 0, 0, 0.2);
 $price-color: #4e54c8;
+$name-color: #373f50;
+$border-radius: 0.4375rem !important;
+$button-bg-color: #fe696a;
 .phone-image {
   width: 180px;
   height: 250px;
+}
+.phone-name,
+.price {
+  font-size: 0.875rem;
 }
 .phone-name {
   width: 180px;
   font-weight: 500;
   letter-spacing: 0.5px;
+  color: $name-color;
 }
-.card:hover {
+.card {
+  border-radius: 0 !important;
+  border: none !important;
+  background-color: #fff !important;
+  border-radius: 0.4375rem !important;
+}
+.phone-card:hover {
   cursor: pointer;
-  box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
-  border-radius: 0.4375rem;
   transition: all 0.2s ease;
+  box-shadow: $box-shadow;
+}
+.phone-card:hover > .extra-options {
+  display: flex !important;
 }
 .price {
   color: $price-color;
   font-weight: 400;
   letter-spacing: 0.3px;
+}
+.extra-options {
+  display: none !important;
+  transition: all 0.15s ease-in-out;
+  box-shadow: $box-shadow;
+  position: absolute;
+  top: 100%;
+  margin-top: -0.8rem !important;
+  transition: all 0.15s ease-in-out;
+  border: none;
+  border-radius: $border-radius;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  background-color: #fff;
+  border-top: 0;
+  z-index: 1;
+  width: 100%;
+}
+.add-to-cart-btn {
+  padding: 0.3rem 1rem;
+  font-size: 0.75rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+  background-color: $button-bg-color;
+  border: none;
 }
