--- a/Frontend/shreeji-shop/src/app/components/tagline/tagline.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/tagline/tagline.component.scss
@@ -3,7 +3,8 @@ $container-bg: #373f50;
 .tagline-container {
   background-color: $container-bg;
   margin-top: 5rem;
-  padding: 3rem 1rem 5rem 1rem;
+  /* padding: 3rem 1rem 5rem 1rem; */
+  padding: 3rem 1rem 5rem 11.3rem;
 }
 h1 {
   font-weight: 500;
