--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
@@ -1,10 +1,11 @@
-<div class="d-flex offset-1 phone-detail-container">
-  <img [src]="phoneDetail.imgUrl" alt="phoneDetail.name" />
-  <div class="col-sm-7 col-lg-8 mt-2">
-    <div class="d-flex align-items-center">
-      <h1 class="brand-name">{{ brandName }}</h1>
-      <h1 class="phone-name">{{ phoneDetail.name }}</h1>
-    </div>
-    <h3 class="price">Rs. {{ phoneDetail.priceEur }}</h3>
+<!-- <div
+  class="d-flex offset-sm-auto offset-lg-1 col-sm-12 col-lg-10 p-2 phone-detail-container bg-white"
+> -->
+<div
+  class="d-flex offset-sm-auto offset-lg-2 col-sm-12 col-lg-8 p-2 phone-detail-container bg-white"
+>
+  <img [src]="phoneDetail?.imgUrl" [alt]="phoneDetail?.name" class="m-3 p-3" />
+  <div class="col-sm-7 col-lg-8 m-3 p-3">
+    <h3 class="price">Rs. {{ phoneDetail?.priceEur }}</h3>
   </div>
 </div>
