--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
@@ -1,11 +1,67 @@
-<!-- <div
-  class="d-flex offset-sm-auto offset-lg-1 col-sm-12 col-lg-10 p-2 phone-detail-container bg-white"
-> -->
 <div
   class="d-flex offset-sm-auto offset-lg-2 col-sm-12 col-lg-8 p-2 phone-detail-container bg-white"
 >
-  <img [src]="phoneDetail?.imgUrl" [alt]="phoneDetail?.name" class="m-3 p-3" />
-  <div class="col-sm-7 col-lg-8 m-3 p-3">
-    <h3 class="price">Rs. {{ phoneDetail?.priceEur }}</h3>
+  <img
+    [src]="phoneDetail?.imgUrl"
+    [alt]="phoneDetail?.name"
+    class="phone-image card m-3 p-3"
+  />
+  <div class="w-100 p-3">
+    <div class="card highlights-container">
+      <h3 class="card-header bg-white price pb-2 border-bottom">
+        Rs.{{ phoneDetail?.priceEur }}
+      </h3>
+      <ng-container *ngFor="let att of phoneAttributes | keyvalue">
+        <div class="category-content d-flex flex-column">
+          <div class="category-container d-flex align-items-center">
+            <img [src]="'/assets/icons/' + att.key + '.svg'" [alt]="att.key" />
+            <p class="text-capitalize category-title ml-2 m-0 p-0">
+              {{ att.key }} Features
+            </p>
+          </div>
+          <div>{{ att.value | json }}</div>
+        </div>
+      </ng-container>
+    </div>
+    <!-- Add to cart & wishlist start -->
+    <div class="mt-2 d-flex">
+      <button
+        class="btn d-flex align-items-baseline justify-content-center w-100 add-to-cart-btn mr-2"
+      >
+        <svg
+          width="1em"
+          height="1em"
+          viewBox="0 0 16 16"
+          class="bi bi-cart2"
+          fill="#ffffff"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+          />
+        </svg>
+        <span class="pl-1 text-white">Add to cart</span>
+      </button>
+      <button
+        class="btn btn-secondary d-flex align-items-baseline justify-content-center w-100 add-to-wishlist-btn ml-2"
+      >
+        <svg
+          width="1em"
+          height="1em"
+          viewBox="0 0 16 16"
+          class="bi bi-heart"
+          fill="#ffffff"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"
+          />
+        </svg>
+        <span class="pl-1 text-white">Add to wishlist</span>
+      </button>
+    </div>
+    <!-- Add to cart & wishlist end -->
   </div>
 </div>
