--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
@@ -1,22 +1,26 @@
 $brand-name-color: #282c3f;
 $phone-name-color: #535665;
 $box-shadow: rgba(0, 0, 0, 0.1);
+$price-color: #4e54c8;
+$button-bg-color: #fe696a;
 
 .phone-detail-container {
   margin-top: -4rem;
   box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
   border-radius: 0.4375rem;
 }
-img {
-  height: 25rem;
+img.phone-image {
+  max-height: 25rem;
+  width: 25rem;
 }
 .brand-name {
   padding: 0 20px 0 0;
 }
 .brand-name,
 .price {
-  color: $brand-name-color;
+  color: $price-color;
   font-size: 24px;
+  letter-spacing: 0.5px;
   font-weight: 500;
   line-height: 1;
 }
@@ -26,4 +30,42 @@ img {
   font-size: 20px;
   opacity: 0.8;
   font-weight: 400;
+}
+.txt-green {
+  color: #03a685;
+  font-weight: 500;
+  font-size: 14px;
+}
+.add-to-cart-btn,
+.add-to-wishlist-btn {
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 0.2rem;
+  border: none;
+  transition: all 0.2s ease;
+}
+.add-to-cart-btn:hover,
+.add-to-wishlist-btn:hover {
+  box-shadow: none;
+}
+.add-to-cart-btn {
+  background-color: $button-bg-color;
+  box-shadow: 0 0.5rem 1.125rem -0.5rem rgba(254, 105, 106, 0.9);
+}
+.add-to-cart-btn:hover {
+  background-color: #ff4142;
+}
+.add-to-wishlist-btn {
+  box-shadow: 0 0.5rem 1.125rem -0.5rem #5a6268;
+}
+svg.bi.bi-heart {
+  position: relative;
+  top: 0.2rem;
+}
+.category-container {
+  padding: 0.75rem 1.25rem;
+}
+.category-title {
+  font-size: 1.1rem;
+  font-weight: 500;
 }
