--- a/Frontend/shreeji-shop/src/app/components/brand-filter/brand-filter.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/brand-filter/brand-filter.component.scss
@@ -46,16 +46,16 @@ button.search {
   margin-right: 1rem;
   outline: none;
 
-  svg {
+  img {
     position: relative;
     top: -0.6rem;
   }
 
-  svg.bi.bi-search {
+  img.bi.bi-search {
     left: -0.1rem;
   }
 
-  svg.bi.bi-x {
+  img.bi.bi-x {
     left: -0.5rem;
   }
 }
