--- a/Frontend/shreeji-shop/src/app/components/brand-filter/brand-filter.component.html
+++ b/Frontend/shreeji-shop/src/app/components/brand-filter/brand-filter.component.html
@@ -10,42 +10,16 @@
       (keyup)="filterBrands()"
     />
     <button class="search mt-2" (click)="handleInputText()">
-      <!-- search icon -->
-      <svg
-        width="0.8em"
-        height="0.8em"
-        viewBox="0 0 16 16"
+      <img
+        src="/assets/icons/search.svg"
         class="bi bi-search"
-        fill="#717288"
-        xmlns="http://www.w3.org/2000/svg"
         *ngIf="!searchClicked"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"
-        />
-        <path
-          fill-rule="evenodd"
-          d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"
-        />
-      </svg>
-      <!-- search icon end -->
-      <!-- close icon -->
-      <svg
-        width="1.5em"
-        height="1.5em"
-        viewBox="0 0 16 16"
+      />
+      <img
+        src="/assets/icons/close.svg"
         class="bi bi-x"
-        fill="#717288"
-        xmlns="http://www.w3.org/2000/svg"
         *ngIf="searchClicked"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
-        />
-      </svg>
-      <!-- close icon end -->
+      />
     </button>
   </div>
   <div class="card-body py-1 ml-3 mt-4">
@@ -105,21 +79,7 @@
         </p>
       </div>
       <button (click)="hideMoreBrandsContainer()">
-        <!-- close icon -->
-        <svg
-          width="1.5em"
-          height="1.5em"
-          viewBox="0 0 16 16"
-          class="bi bi-x"
-          fill="#717288"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
-          />
-        </svg>
-        <!-- close icon end -->
+        <img src="/assets/icons/close.svg" class="bi bi-x" />
       </button>
     </div>
     <div
