--- a/Frontend/shreeji-shop/src/app/components/home/home.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="d-flex offset-sm-auto offset-lg-1 p-2"> -->
+<app-tagline (applySort)="sortPhones($event)"></app-tagline>
 <div class="d-flex offset-sm-auto offset-lg-2 p-2">
   <div class="col-sm-4 col-lg-3 col-xl-2 p-0">
     <app-brand-filter
