--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
@@ -12,6 +12,8 @@ $button-bg-color: #fe696a;
 img.phone-image {
   max-height: 25rem;
   width: 25rem;
+  position: sticky;
+  top: 5.5rem;
 }
 .brand-name {
   padding: 0 20px 0 0;
@@ -58,7 +60,7 @@ img.phone-image {
 .add-to-wishlist-btn {
   box-shadow: 0 0.5rem 1.125rem -0.5rem #5a6268;
 }
-svg.bi.bi-heart {
+img.bi.bi-heart {
   position: relative;
   top: 0.2rem;
 }
@@ -68,4 +70,13 @@ svg.bi.bi-heart {
 .category-title {
   font-size: 1.1rem;
   font-weight: 500;
+}
+.attributes-container {
+  padding: 0 0.8rem;
+  font-size: 0.9rem;
+
+  .attribute-title {
+    color: #878787;
+    min-width: 10rem;
+  }
 }
