Similar phones changes

--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
@@ -50,3 +50,8 @@
     </div>
   </div>
 </div>
+<div class="py-3 px-0 mb-3 d-flex offset-sm-auto offset-lg-2 col-sm-12 col-lg-8">
+  <app-phone-model
+      [phoneResponse]="phoneModelSubject.asObservable()"
+    ></app-phone-model>
+</div>
