--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
@@ -80,3 +80,7 @@ img.bi.bi-heart {
     min-width: 10rem;
   }
 }
+.similar-phones-container {
+  box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
+  border-radius: 0.4375rem;
+}
