--- a/Frontend/shreeji-shop/src/app/components/brand-filter/brand-filter.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/brand-filter/brand-filter.component.scss
@@ -6,13 +6,6 @@ $box-shadow: rgba(0, 0, 0, 0.1);
 $indicator-color: #737373;
 
 .brand-filter-container {
-  position: sticky;
-  top: 5.5rem;
-  z-index: 10;
-  box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
-  border-radius: 0.4375rem;
-  margin-top: -4rem;
-
   label {
     letter-spacing: 0.5px;
   }
@@ -20,6 +13,7 @@ $indicator-color: #737373;
 .sub-heading {
   font-size: 14px;
   font-weight: 500;
+  letter-spacing: 0.5px;
 }
 input.search-bar {
   position: absolute;
@@ -83,7 +77,7 @@ input[type="checkbox"] {
   height: 27rem;
   top: 0;
   box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
-  z-index: 5;
+  z-index: 15;
   border-radius: 0.4375rem;
 
   .top-bar {
