--- a/Frontend/shreeji-shop/src/app/components/home/home.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.scss
@@ -1,1 +1,29 @@
+$box-shadow: 0 0.3rem 1.525rem -0.375rem rgba(0, 0, 0, 0.1);
 
+.all-filters-container {
+  position: sticky;
+  top: 5.5rem;
+  z-index: 10;
+  box-shadow: $box-shadow;
+  border-radius: 0.4375rem;
+  margin-top: -4.1rem;
+
+  .all-filters {
+    position: relative;
+    z-index: 12;
+
+    .heading {
+      font-weight: 500;
+      letter-spacing: 1px;
+    }
+
+    .clear-all {
+      font-weight: 500;
+      font-size: 14px;
+      color: #fe696a;
+      letter-spacing: 0.5px;
+      cursor: pointer;
+      user-select: none;
+    }
+  }
+}
