--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
@@ -1,3 +1,18 @@
+<div
+  class="d-flex align-items-center justify-content-between all-filters border-bottom w-100 px-3 mt-2"
+>
+  <p class="heading text-uppercase">filters</p>
+  <p
+    class="clear-all text-uppercase"
+    *ngIf="showClearAll"
+    (click)="resetBrands()"
+  >
+    clear all
+  </p>
+</div>
+<div class="border-bottom w-100 mt-2">
+  <h6 class="text-uppercase sub-heading pt-3 pl-3">price</h6>
+</div>
 <div class="brand-filter-container">
   <div class="d-flex align-items-center">
     <h6 class="text-uppercase sub-heading pt-3 pl-3">brand</h6>
