--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
@@ -5,6 +5,25 @@ $bootstrap-blue: #007bff;
 $box-shadow: rgba(0, 0, 0, 0.1);
 $indicator-color: #737373;
 
+.all-filters {
+  position: relative;
+  z-index: 12;
+
+  .heading {
+    font-weight: 500;
+    letter-spacing: 1px;
+  }
+
+  .clear-all {
+    font-weight: 500;
+    font-size: 14px;
+    color: #fe696a;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    user-select: none;
+  }
+}
+
 .brand-filter-container {
   label {
     letter-spacing: 0.5px;
@@ -73,9 +92,9 @@ input[type="checkbox"] {
 }
 .more-brands-container {
   position: absolute;
-  width: 45rem;
-  height: 27rem;
+  height: 30rem;
   top: 0;
+  left: 0;
   box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
   z-index: 15;
   border-radius: 0.4375rem;
@@ -128,6 +147,6 @@ input[type="checkbox"] {
   .all-brands {
     overflow-x: auto;
     overflow-y: hidden;
-    width: 45rem;
+    width: 50rem;
   }
 }
