--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
@@ -80,7 +80,27 @@ img.bi.bi-heart {
     min-width: 10rem;
   }
 }
-.similar-phones-container {
-  box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
-  border-radius: 0.4375rem;
+p.other-phones {
+  font-size: 20px;
+  text-align: center;
+  letter-spacing: 0.5px;
+  opacity: 80%;
+}
+p.other-phones::before {
+  display: inline-block;
+  content: "";
+  border-top: 1px dashed black;
+  width: 20%;
+  margin: 0 1rem;
+  transform: translateY(-0.4rem);
+  opacity: 80%;
+}
+p.other-phones::after {
+  display: inline-block;
+  content: "";
+  border-top: 1px dashed black;
+  width: 20%;
+  margin: 0 1rem;
+  transform: translateY(-0.4rem);
+  opacity: 80%;
 }
