--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
@@ -12,6 +12,29 @@
 </div>
 <div class="border-bottom w-100 mt-2">
   <h6 class="text-uppercase sub-heading pt-3 pl-3">price</h6>
+  <div class="px-3 py-2">
+    <p class="m-0">{{ selectedMinPrice }} - {{ selectedMaxPrice }}</p>
+    <input
+      type="range"
+      class="w-100 px-3"
+      [(ngModel)]="selectedMinPrice"
+      [min]="priceRange?.minPrice"
+      [max]="priceRange?.maxPrice"
+    />
+    <input
+      type="range"
+      class="w-100 px-3"
+      [(ngModel)]="selectedMaxPrice"
+      [min]="priceRange?.minPrice"
+      [max]="priceRange?.maxPrice"
+    />
+    <div class="slider m-0">
+      <div class="track"></div>
+      <div class="range"></div>
+      <div class="thumb left"></div>
+      <div class="thumb right"></div>
+    </div>
+  </div>
 </div>
 <div class="brand-filter-container">
   <div class="d-flex align-items-center">
