--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
@@ -150,3 +150,72 @@ input[type="checkbox"] {
     width: 50rem;
   }
 }
+.slider {
+  position: relative;
+  z-index: 1;
+  height: 5px;
+
+  .track {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 5px;
+    background-color: #007bff75;
+  }
+  .range {
+    position: absolute;
+    z-index: 2;
+    left: 0%;
+    right: 0%;
+    top: 0;
+    bottom: 0;
+    border-radius: 5px;
+    background-color: #007bff;
+  }
+  .thumb {
+    position: absolute;
+    z-index: 3;
+    width: 15px;
+    height: 15px;
+    background-color: #007bff;
+    border-radius: 50%;
+    box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.1);
+    transition: box-shadow 0.3s ease-in-out;
+  }
+  .thumb.left {
+    left: 0%;
+    transform: translate(-14px, -5px);
+  }
+  .thumb.right {
+    right: 0%;
+    transform: translate(10px, -5px);
+  }
+  .thumb.hover {
+    box-shadow: 0 0 0 20px rgba(0, 123, 255, 0.1);
+  }
+  .thumb.active {
+    box-shadow: 0 0 0 40px rgba(0, 123, 255, 0.2);
+  }
+}
+input[type="range"] {
+  position: absolute;
+  pointer-events: none;
+  -webkit-appearance: none;
+  z-index: 2;
+  left: 0;
+  height: 10px;
+  width: 100%;
+  opacity: 0;
+}
+input[type="range"]::-webkit-slider-thumb {
+  pointer-events: all;
+  width: 30px;
+  height: 30px;
+  border-radius: 0;
+  border: 0 none;
+  background-color: red;
+  -webkit-appearance: none;
+}
