--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
@@ -10,29 +10,56 @@
     clear all
   </p>
 </div>
-<div class="border-bottom w-100 mt-2">
-  <h6 class="text-uppercase sub-heading pt-3 pl-3">price</h6>
-  <div class="px-3 py-2">
-    <p class="m-0">{{ selectedMinPrice }} - {{ selectedMaxPrice }}</p>
+<div class="border-bottom w-100 px-3">
+  <h6 class="text-uppercase sub-heading pt-3">price</h6>
+  <div class="py-2">
     <input
       type="range"
-      class="w-100 px-3"
       [(ngModel)]="selectedMinPrice"
       [min]="priceRange?.minPrice"
       [max]="priceRange?.maxPrice"
+      (input)="setLeftThumb()"
     />
     <input
       type="range"
-      class="w-100 px-3"
       [(ngModel)]="selectedMaxPrice"
       [min]="priceRange?.minPrice"
       [max]="priceRange?.maxPrice"
+      (input)="setRightThumb()"
     />
     <div class="slider m-0">
       <div class="track"></div>
-      <div class="range"></div>
-      <div class="thumb left"></div>
-      <div class="thumb right"></div>
+      <div class="range" [ngStyle]="rangeStyle"></div>
+      <div class="thumb left" [ngStyle]="thumbLeftStyle"></div>
+      <div class="thumb right" [ngStyle]="thumbRightStyle"></div>
+    </div>
+  </div>
+  <div class="d-flex align-items-center justify-content-between">
+    <div class="input-group mb-3 pr-1">
+      <div class="input-group-prepend">
+        <span class="input-group-text font-small px-2">₹</span>
+      </div>
+      <input
+        type="number"
+        class="form-control font-small p-1"
+        [(ngModel)]="selectedMinPrice"
+        [min]="priceRange?.minPrice"
+        [max]="priceRange?.maxPrice"
+        (input)="setLeftThumb()"
+      />
+    </div>
+    <div class="input-group mb-3 pl-1">
+      <div class="input-group-prepend">
+        <span class="input-group-text font-small px-2">₹</span>
+      </div>
+      <input
+        type="number"
+        class="form-control font-small p-1"
+        [(ngModel)]="selectedMaxPrice"
+        [min]="priceRange?.minPrice"
+        [max]="priceRange?.maxPrice"
+        (input)="setRightThumb()"
+      />
     </div>
   </div>
 </div>
