--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
@@ -93,7 +93,7 @@ input[type="checkbox"] {
 .more-brands-container {
   position: absolute;
   height: 30rem;
-  top: 0;
+  top: 7rem;
   left: 0;
   box-shadow: 0 0.3rem 1.525rem -0.375rem $box-shadow;
   z-index: 15;
@@ -168,8 +168,6 @@ input[type="checkbox"] {
   .range {
     position: absolute;
     z-index: 2;
-    left: 0%;
-    right: 0%;
     top: 0;
     bottom: 0;
     border-radius: 5px;
@@ -185,19 +183,9 @@ input[type="checkbox"] {
     box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.1);
     transition: box-shadow 0.3s ease-in-out;
   }
-  .thumb.left {
-    left: 0%;
-    transform: translate(-14px, -5px);
-  }
+  .thumb.left,
   .thumb.right {
-    right: 0%;
-    transform: translate(10px, -5px);
-  }
-  .thumb.hover {
-    box-shadow: 0 0 0 20px rgba(0, 123, 255, 0.1);
-  }
-  .thumb.active {
-    box-shadow: 0 0 0 40px rgba(0, 123, 255, 0.2);
+    transform: translate(0px, -5px);
   }
 }
 input[type="range"] {
@@ -205,17 +193,19 @@ input[type="range"] {
   pointer-events: none;
   -webkit-appearance: none;
   z-index: 2;
-  left: 0;
-  height: 10px;
-  width: 100%;
+  height: 5px;
   opacity: 0;
+  width: 80%;
 }
 input[type="range"]::-webkit-slider-thumb {
   pointer-events: all;
-  width: 30px;
-  height: 30px;
+  width: 15px;
+  height: 15px;
   border-radius: 0;
   border: 0 none;
   background-color: red;
   -webkit-appearance: none;
+}
+.font-small {
+  font-size: small;
 }
