--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
@@ -12,27 +12,12 @@
 </div>
 <div class="border-bottom w-100 px-3">
   <h6 class="text-uppercase sub-heading pt-3">price</h6>
-  <div class="py-2">
-    <input
-      type="range"
-      [(ngModel)]="selectedMinPrice"
-      [min]="priceRange?.minPrice"
-      [max]="priceRange?.maxPrice"
-      (input)="setLeftThumb()"
-    />
-    <input
-      type="range"
-      [(ngModel)]="selectedMaxPrice"
-      [min]="priceRange?.minPrice"
-      [max]="priceRange?.maxPrice"
-      (input)="setRightThumb()"
-    />
-    <div class="slider m-0">
-      <div class="track"></div>
-      <div class="range" [ngStyle]="rangeStyle"></div>
-      <div class="thumb left" [ngStyle]="thumbLeftStyle"></div>
-      <div class="thumb right" [ngStyle]="thumbRightStyle"></div>
-    </div>
+  <div class="py-2" *ngIf="selectedMinPrice">
+    <ngx-slider
+      [(value)]="selectedMinPrice"
+      [(highValue)]="selectedMaxPrice"
+      [options]="options"
+    ></ngx-slider>
   </div>
   <div class="d-flex align-items-center justify-content-between">
     <div class="input-group mb-3 pr-1">
@@ -44,8 +29,7 @@
         class="form-control font-small p-1"
         [(ngModel)]="selectedMinPrice"
         [min]="priceRange?.minPrice"
-        [max]="priceRange?.maxPrice"
-        (input)="setLeftThumb()"
+        [max]="priceRange?.maxPrice - 1"
       />
     </div>
     <div class="input-group mb-3 pl-1">
@@ -56,9 +40,8 @@
         type="number"
         class="form-control font-small p-1"
         [(ngModel)]="selectedMaxPrice"
-        [min]="priceRange?.minPrice"
+        [min]="priceRange?.minPrice + 1"
         [max]="priceRange?.maxPrice"
-        (input)="setRightThumb()"
       />
     </div>
   </div>
