--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
@@ -4,6 +4,7 @@ $input-bg-color: #f5f5f6;
 $bootstrap-blue: #007bff;
 $box-shadow: rgba(0, 0, 0, 0.1);
 $indicator-color: #737373;
+$custom-orange: #fe696a;
 
 .all-filters {
   position: relative;
@@ -17,7 +18,7 @@ $indicator-color: #737373;
   .clear-all {
     font-weight: 500;
     font-size: 14px;
-    color: #fe696a;
+    color: $custom-orange;
     letter-spacing: 0.5px;
     cursor: pointer;
     user-select: none;
@@ -150,62 +151,40 @@ input[type="checkbox"] {
     width: 50rem;
   }
 }
-.slider {
-  position: relative;
-  z-index: 1;
-  height: 5px;
-
-  .track {
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    border-radius: 5px;
-    background-color: #007bff75;
+::ng-deep {
+  .ngx-slider {
+    .ngx-slider-pointer {
+      background-color: #fff !important;
+      box-shadow: 0 0.125rem 0.5625rem -0.125rem rgb(0 0 0 / 25%);
+      outline: none;
+      border-radius: 50% !important;
+      width: 22px !important;
+      height: 22px !important;
+      top: -10px !important;
+    }
+    .ngx-slider-bubble::before {
+      content: "₹";
+    }
+    .ngx-slider-bubble {
+      padding: 0.25rem 0.5rem !important;
+      color: #fff !important;
+      font-size: 0.75rem !important;
+      border: 0;
+      background-color: #373f50;
+      line-height: 1.2;
+      border-radius: 0.1875rem;
+    }
+    .ngx-slider-pointer:after {
+      display: none;
+    }
+    .ngx-slider-selection {
+      background-color: $custom-orange !important;
+    }
   }
-  .range {
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    bottom: 0;
-    border-radius: 5px;
-    background-color: #007bff;
-  }
-  .thumb {
-    position: absolute;
-    z-index: 3;
-    width: 15px;
-    height: 15px;
-    background-color: #007bff;
-    border-radius: 50%;
-    box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.1);
-    transition: box-shadow 0.3s ease-in-out;
-  }
-  .thumb.left,
-  .thumb.right {
-    transform: translate(0px, -5px);
-  }
-}
-input[type="range"] {
-  position: absolute;
-  pointer-events: none;
-  -webkit-appearance: none;
-  z-index: 2;
-  height: 5px;
-  opacity: 0;
-  width: 80%;
-}
-input[type="range"]::-webkit-slider-thumb {
-  pointer-events: all;
-  width: 15px;
-  height: 15px;
-  border-radius: 0;
-  border: 0 none;
-  background-color: red;
-  -webkit-appearance: none;
 }
 .font-small {
   font-size: small;
+}
+.input-group-text {
+  background-color: #fff;
 }
