--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.html
@@ -12,11 +12,12 @@
 </div>
 <div class="border-bottom w-100 px-3">
   <h6 class="text-uppercase sub-heading pt-3">price</h6>
-  <div class="py-2" *ngIf="selectedMinPrice">
+  <div class="pb-2" *ngIf="selectedMinPrice">
     <ngx-slider
       [(value)]="selectedMinPrice"
       [(highValue)]="selectedMaxPrice"
       [options]="options"
+      (userChange)="onUserChange()"
     ></ngx-slider>
   </div>
   <div class="d-flex align-items-center justify-content-between">
@@ -29,7 +30,8 @@
         class="form-control font-small p-1"
         [(ngModel)]="selectedMinPrice"
         [min]="priceRange?.minPrice"
-        [max]="priceRange?.maxPrice - 1"
+        [max]="priceRange?.maxPrice"
+        (keyup)="onUserChange()"
       />
     </div>
     <div class="input-group mb-3 pl-1">
@@ -40,8 +42,9 @@
         type="number"
         class="form-control font-small p-1"
         [(ngModel)]="selectedMaxPrice"
-        [min]="priceRange?.minPrice + 1"
+        [min]="priceRange?.minPrice"
         [max]="priceRange?.maxPrice"
+        (keyup)="onUserChange()"
       />
     </div>
   </div>
