--- a/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/filter/filter.component.scss
@@ -164,6 +164,7 @@ input[type="checkbox"] {
     }
     .ngx-slider-bubble::before {
       content: "₹";
+      padding-right: 0.1rem;
     }
     .ngx-slider-bubble {
       padding: 0.25rem 0.5rem !important;
