login component changes

--- a/Frontend/shreeji-shop/src/app/components/home/home.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <app-tagline (applySort)="sortPhones($event)"></app-tagline>
 <div class="d-flex offset-sm-auto offset-lg-2 p-2">
   <div
@@ -18,3 +19,4 @@
     ></app-pagination>
   </div>
 </div>
+<router-outlet></router-outlet>
