--- a/Frontend/shreeji-shop/src/app/components/header/header.component.html
+++ b/Frontend/shreeji-shop/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="#">Shreeji Shop</a>
   <input class="form-control col-sm-4 col-lg-5" type="search" placeholder="Search..." />
   <div class="buttons">
-    <button class="btn btn-primary mr-2" type="button">Profile</button>
+    <button class="btn btn-primary mr-2" type="button" (click)="openProfileSafe()">Profile</button>
     <button class="btn btn-primary mr-2" type="button">Wishlist</button>
     <button class="btn btn-primary mr-2" type="button">Bag</button>
   </div>
